syntax = "proto3";

package api;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Metrics {
  rpc Query (QueryMetricsRequest) returns (QueryMetricsResponse);
  rpc Write(WriteMetricsRequest) returns (google.protobuf.Empty);
}

message QueryMetricsRequest {
  string metricName = 1;
  map<string, string> labels = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
  google.protobuf.Duration chunkSize = 5;
}

message QueryMetricsResponse {
  repeated Metric metrics = 1;
}

message Metric {
  string name = 1;
  map<string, string> labels = 2;
  repeated SamplePair values = 3;
}

message SamplePair {
  google.protobuf.Timestamp time = 1;
  double value = 2;
}

message WriteMetricsRequest {
  repeated Metric metrics = 1;
}
